tests/baselines/reference/topLevelAwaitErrors.12(module=es2022).errors.txt
topLevelAwaitErrors.12.ts(5,8): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== topLevelAwaitErrors.12.ts (1 errors) ====
    export {};
    declare namespace foo { const await: any; }
    
    // await disallowed in import=namespace when in a module
    import await = foo.await;
           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    